tests/baselines/reference/callConstructorsES6_02.errors.txt
tests/cases/conformance/es7/callConstructors/es6/callConstructorsES6_02.ts(12,10): error TS2348: Value of type 'typeof C' is not callable. Did you mean to include 'new'?


==== tests/cases/conformance/es7/callConstructors/es6/callConstructorsES6_02.ts (1 errors) ====
    
    class C {
        constructor(private num: number) {}
    
        call constructor(): C {
            let result = new C(10);
            return result;
        }
    }
    
    let c1 = new C(10);
    let c2 = C();
             ~~~
!!! error TS2348: Value of type 'typeof C' is not callable. Did you mean to include 'new'?
    let eq = c1 === c2;